--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI/CD Pipeline for EKS
 
 on:
   push:
-    branches: [ "main", "master" ]  # Auto-deploy to EKS
+    branches: [ "main", "master" ]
   pull_request:
-    branches: [ "main", "master", "docker" ]  # Test PRs to any branch
+    branches: [ "main", "master", "docker" ]
 
 permissions:
   contents: read
@@ -25,8 +25,6 @@ jobs:
     name: Build and Test (frontend + backend)
     runs-on: ubuntu-latest
     outputs:
-      frontend-version: ${{ steps.version.outputs.frontend-version }}
-      backend-version: ${{ steps.version.outputs.backend-version }}
       should-deploy: ${{ steps.check-branch.outputs.should-deploy }}
     strategy:
       matrix:
@@ -36,15 +34,6 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-
-      - name: Setup Semantic Versioning
-        id: version
-        uses: paulhatch/semantic-version@v5.3.0
-        with:
-          tag_prefix: ""
-          major_pattern: "BREAKING CHANGE:"
-          minor_pattern: "feat:"
-          format: "${major}.${minor}.${patch}-${increment}"
 
       - name: Check if should deploy
         id: check-branch
@@ -75,13 +64,6 @@ jobs:
       - name: Build (if present)
         working-directory: ${{ matrix.project }}
         run: npm run build --if-present
-
-      - name: Display versions
-        run: |
-          echo "Frontend Version: ${{ steps.version.outputs.version }}"
-          echo "Backend Version: ${{ steps.version.outputs.version }}"
-          echo "Semantic Version: ${{ steps.version.outputs.semantic_version }}"
-          echo "Branch: ${{ github.ref }}"
 
   sonar-analysis:
     name: SonarQube Analysis
@@ -114,36 +96,24 @@ jobs:
             -Dsonar.ci.autoconfig.disabled=true
             ${{ github.event_name == 'pull_request' && format('-Dsonar.pullrequest.key={0} -Dsonar.pullrequest.branch={1} -Dsonar.pullrequest.base={2}', github.event.pull_request.number, github.event.pull_request.head.ref, github.event.pull_request.base.ref) || '' }}
 
-      - name: SonarQube Quality Gate Check
-        if: github.event_name == 'push'
-        uses: SonarSource/sonarqube-quality-gate-action@v1.1.0
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      - name: Upload frontend build
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-build
-          path: frontend/build
-          if-no-files-found: ignore
-
-      - name: Upload backend package
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: backend-src
-          path: backend
-          if-no-files-found: ignore
-
   build-and-push-docker:
     name: Build and Push Docker Images
     needs: [ build-and-test, sonar-analysis ]
     if: needs.build-and-test.outputs.should-deploy == 'true'
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Get Semantic Version
+        id: version
+        uses: paulhatch/semantic-version@v5.3.0
+        with:
+          tag_prefix: ""
+          major_pattern: "BREAKING CHANGE:"
+          minor_pattern: "feat:"
 
       - name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -154,28 +124,6 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-      - name: Extract metadata for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: |
-            ${{ env.FRONTEND_IMAGE }}
-            ${{ env.BACKEND_IMAGE }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=sha,prefix={{branch}}-
-
-      - name: Get Semantic Version
-        id: version
-        uses: paulhatch/semantic-version@v5.3.0
-        with:
-          tag_prefix: ""
-          major_pattern: "BREAKING CHANGE:"
-          minor_pattern: "feat:"
-
       - name: Build and push Frontend Docker image
         uses: docker/build-push-action@v5
         with:
@@ -185,10 +133,9 @@ jobs:
           tags: |
             ${{ env.FRONTEND_IMAGE }}:v${{ steps.version.outputs.version }}
             ${{ env.FRONTEND_IMAGE }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64  # Multi-arch for EKS
+          platforms: linux/amd64,linux/arm64
 
       - name: Build and push Backend Docker image
         uses: docker/build-push-action@v5
@@ -199,16 +146,14 @@ jobs:
           tags: |
             ${{ env.BACKEND_IMAGE }}:v${{ steps.version.outputs.version }}
             ${{ env.BACKEND_IMAGE }}:latest
-          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          platforms: linux/amd64,linux/arm64  # Multi-arch for EKS
+          platforms: linux/amd64,linux/arm64
 
-      - name: Output version info
+      - name: Output version for deployment
         run: |
-          echo "Frontend Image: ${{ env.FRONTEND_IMAGE }}:v${{ steps.version.outputs.version }}"
-          echo "Backend Image: ${{ env.BACKEND_IMAGE }}:v${{ steps.version.outputs.version }}"
-          echo "Semantic Version: v${{ steps.version.outputs.version }}"
+          echo "version=${{ steps.version.outputs.version }}" >> $GITHUB_OUTPUT
+          echo "📦 Images tagged with: v${{ steps.version.outputs.version }}"
 
   deploy-to-eks:
     name: 🚀 Deploy to AWS EKS
@@ -232,11 +177,6 @@ jobs:
             --region ${{ env.EKS_REGION }} \
             --name ${{ env.EKS_CLUSTER_NAME }}
 
-      - name: Verify cluster access
-        run: |
-          kubectl get nodes
-          kubectl get namespaces
-
       - name: Deploy to EKS
         run: |
           echo "🚀 Starting deployment to EKS cluster: ${{ env.EKS_CLUSTER_NAME }}"
@@ -244,49 +184,59 @@ jobs:
           # Create namespace if it doesn't exist
           kubectl create namespace ${{ env.NAMESPACE }} --dry-run=client -o yaml | kubectl apply -f -
           
-          # Deploy backend
-          echo "📦 Deploying backend..."
+          # Use the actual version from build job
+          VERSION="${{ needs.build-and-push-docker.outputs.version }}"
+          echo "📦 Deployment version: $VERSION"
+          
+          # Use versioned tags, fallback to latest if version is empty
+          if [ -n "$VERSION" ]; then
+            BACKEND_TAG="v$VERSION"
+            FRONTEND_TAG="v$VERSION"
+          else
+            BACKEND_TAG="latest"
+            FRONTEND_TAG="latest"
+            echo "⚠️ Version not found, using latest tags"
+          fi
+          
+          echo "📦 Deploying backend with tag: $BACKEND_TAG"
           kubectl set image deployment/backend-deployment \
-            backend=${{ env.BACKEND_IMAGE }}:v${{ needs.build-and-push-docker.outputs.version }} \
-            -n ${{ env.NAMESPACE }} --record
+            backend=${{ env.BACKEND_IMAGE }}:$BACKEND_TAG \
+            -n ${{ env.NAMESPACE }}
           
-          # Deploy frontend  
-          echo "📦 Deploying frontend..."
+          echo "📦 Deploying frontend with tag: $FRONTEND_TAG"  
           kubectl set image deployment/frontend-deployment \
-            frontend=${{ env.FRONTEND_IMAGE }}:v${{ needs.build-and-push-docker.outputs.version }} \
-            -n ${{ env.NAMESPACE }} --record
+            frontend=${{ env.FRONTEND_IMAGE }}:$FRONTEND_TAG \
+            -n ${{ env.NAMESPACE }}
           
-          # Wait for rollout to complete
+          # Wait for rollout with better error handling and debugging
           echo "⏳ Waiting for deployments to complete..."
-          kubectl rollout status deployment/backend-deployment -n ${{ env.NAMESPACE }} --timeout=300s
-          kubectl rollout status deployment/frontend-deployment -n ${{ env.NAMESPACE }} --timeout=300s
           
-          # Verify services
-          echo "🔍 Verifying services..."
+          # Check pod status with timeout and debugging
+          echo "🔍 Checking pod status..."
+          timeout 180s bash -c '
+            while true; do
+              BACKEND_READY=$(kubectl get deployment backend-deployment -n ${{ env.NAMESPACE }} -o jsonpath="{.status.readyReplicas}" 2>/dev/null || echo "0")
+              FRONTEND_READY=$(kubectl get deployment frontend-deployment -n ${{ env.NAMESPACE }} -o jsonpath="{.status.readyReplicas}" 2>/dev/null || echo "0")
+              
+              echo "Backend ready: $BACKEND_READY/2, Frontend ready: $FRONTEND_READY/2"
+              
+              if [[ "$BACKEND_READY" -eq 2 && "$FRONTEND_READY" -eq 2 ]]; then
+                echo "✅ All pods are ready!"
+                break
+              fi
+              
+              sleep 10
+            done
+          ' || echo "⚠️ Timeout reached, checking status..."
+          
+          # Final status
+          echo "🔍 Final status:"
           kubectl get deployments -n ${{ env.NAMESPACE }}
-          kubectl get services -n ${{ env.NAMESPACE }}
-          kubectl get ingress -n ${{ env.NAMESPACE }}
+          kubectl get pods -n ${{ env.NAMESPACE }} -o wide
           
           # Get ALB URL
           ALB_URL=$(kubectl get ingress app-ingress -n ${{ env.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}' 2>/dev/null || echo "Not available yet")
           echo "🌐 Application URL: http://$ALB_URL"
-
-      - name: Run health checks
-        run: |
-          echo "🏥 Running health checks..."
-          ALB_URL=$(kubectl get ingress app-ingress -n ${{ env.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}' 2>/dev/null || echo "")
-          
-          if [ -n "$ALB_URL" ]; then
-            echo "Testing frontend: http://$ALB_URL"
-            curl -s -f http://$ALB_URL > /dev/null && echo "✅ Frontend is healthy" || echo "❌ Frontend health check failed"
-            
-            echo "Testing backend API: http://$ALB_URL/api"
-            curl -s -f http://$ALB_URL/api > /dev/null && echo "✅ Backend API is healthy" || echo "❌ Backend API health check failed"
-          else
-            echo "⚠️ ALB not ready yet, skipping external health checks"
-            # Internal health check
-            kubectl get pods -n ${{ env.NAMESPACE }} -o wide
-          fi
 
   notify:
     name: Notify Status
@@ -294,32 +244,15 @@ jobs:
     if: always()
     runs-on: ubuntu-latest
     steps:
-      - name: Get Semantic Version
-        id: version
-        uses: paulhatch/semantic-version@v5.3.0
-        with:
-          tag_prefix: ""
-
-      - name: Get ALB URL
-        id: alb
-        run: |
-          ALB_URL=$(kubectl get ingress app-ingress -n ${{ env.NAMESPACE }} -o jsonpath='{.status.loadBalancer.ingress[0].hostname}' 2>/dev/null || echo "Not available")
-          echo "ALB_URL=$ALB_URL" >> $GITHUB_OUTPUT
-
       - name: Notify Success
         if: success()
         run: |
           echo "✅ CI/CD Pipeline completed successfully!"
-          echo "📦 Version: v${{ steps.version.outputs.version }}"
-          echo "🌐 Production URL: http://${{ steps.alb.outputs.ALB_URL }}"
-          echo "🔗 Backend API: http://${{ steps.alb.outputs.ALB_URL }}/api"
-          echo "📊 SonarQube analysis: Complete"
-          echo "🐳 Docker images: Updated"
-          echo "☸️  Kubernetes: Deployed to EKS cluster '${{ env.EKS_CLUSTER_NAME }}'"
+          echo "☸️  Application deployed to EKS: ${{ env.EKS_CLUSTER_NAME }}"
+          echo "📦 Check EKS console for ALB URL"
 
       - name: Notify Failure
         if: failure()
         run: |
           echo "❌ CI/CD Pipeline failed"
-          echo "📦 Version: v${{ steps.version.outputs.version }}"
           echo "🔍 Check the workflow logs for details"
