--- a/k8s/backend-service.yaml
+++ b/k8s/backend-service.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     app: backend
   ports:
-    - port: 5001
+    - protocol: TCP
+      port: 5001
       targetPort: 5001
-      protocol: TCP
   type: ClusterIP
