--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: anupsharma329/frontend:v0.1.1
+          image: anupsharma329/frontend:latest
           ports:
             - containerPort: 80
           env:
